--- a/2-DivaAcknowledgement.tex
+++ b/2-DivaAcknowledgement.tex
@@ -18,7 +18,7 @@ This document was written for helping oceanographers work with the \diva softwar
 We would like to thank:
 \newline
 \newline
-the participants to the \diva workshops in Li\`{e}ge (November 2006), in Calvi (November 2007, October 2008, October 2009 and November 2010) and in Roumaillac (October 2012) for their numerous valuable comments to improve the software and the manual;
+the participants to the \diva workshops in Li\`{e}ge (November 2006), Calvi (November 2007, October 2008, October 2009 and November 2010) and Roumaillac (October 2012) for their numerous valuable comments to improve the software and the manual;
 \newline
 \newline
 J.~Carstensen (Aarhus University, Denmark) for his contribution in the implementation of the \textit{detrending} method;
