--- a/3-DivaConditionUse.tex
+++ b/3-DivaConditionUse.tex
@@ -11,7 +11,7 @@
 
 
 \vspace{.25cm}
-\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \texttt{JRA4} activities. \diva is copyright $\copyright$  2006-2013 by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html} \index{SeaDataNet}
+\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \textsf{JRA4} activities. \diva is copyright $\copyright$  2006-2013 by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html} \index{SeaDataNet}
 
 In short, this means that everyone is free to use \diva and to redistribute it on a free basis. \diva is not in the public domain; it is copyrighted and there are restrictions on its distribution (see the license \url{http://www.gnu.org/copyleft/gpl.html} and its associated FAQ \url{http://www.gnu.org/copyleft/gpl-faq.html}). For example, you cannot integrate this version of \diva (in full or in parts) in any \textit{closed-source} software you plan to distribute (commercially or not).
 
